// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`active sessions CTA 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
  width: 340px;
}

.c11 {
  box-sizing: border-box;
}

.c31 {
  box-sizing: border-box;
  width: 80px;
  text-align: center;
}

.c21 {
  box-sizing: border-box;
  margin-bottom: 4px;
  width: 100%;
}

.c23 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-top: 12px;
  padding-bottom: 12px;
  width: 100%;
  height: 36px;
}

.c10:hover,
.c10:focus {
  background: #B29DFF;
}

.c10:active {
  background: #C5B6FF;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c32 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c32:hover,
.c32:focus {
  background: rgba(255,255,255,0.07);
}

.c32:active {
  background: rgba(255,255,255,0.13);
}

.c32:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c25 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c25:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c25:not(:disabled):hover,
.c25:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c25:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c27 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c27:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c27:not(:disabled):hover,
.c27:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c27:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c13 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c30 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  margin-right: 16px;
  padding: 4px;
}

.c33 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.72);
  margin-left: 4px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  font-weight: 500;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c12 {
  display: flex;
  align-items: center;
}

.c22 {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c8 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c14 {
  color: inherit;
  font-weight: 500;
  font-size: 15px;
  margin-right: 10px;
}

.c28 {
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c28 > thead > tr > th,
.c28 > tbody > tr > th,
.c28 > tfoot > tr > th,
.c28 > thead > tr > td,
.c28 > tbody > tr > td,
.c28 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c28 > thead > tr > th:first-child,
.c28 > tbody > tr > th:first-child,
.c28 > tfoot > tr > th:first-child,
.c28 > thead > tr > td:first-child,
.c28 > tbody > tr > td:first-child,
.c28 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c28 > thead > tr > th:last-child,
.c28 > tbody > tr > th:last-child,
.c28 > tfoot > tr > th:last-child,
.c28 > thead > tr > td:last-child,
.c28 > tbody > tr > td:last-child,
.c28 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c28 > tbody > tr > td {
  vertical-align: middle;
}

.c28 > thead > tr > th {
  color: #FFFFFF;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  cursor: pointer;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  white-space: nowrap;
}

.c28 > thead > tr > th svg {
  height: 12px;
}

.c28 > tbody > tr > td {
  color: #FFFFFF;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.035px;
}

.c28 tbody tr {
  transition: all 150ms;
  position: relative;
  border-top: 2px solid rgba(255,255,255,0.07);
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c28 tbody tr:hover {
  border-top: 2px solid rgba(0,0,0,0);
  background-color: #222C59;
}

.c28 tbody tr:hover:after {
  box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.12),0px 4px 5px 0px rgba(0,0,0,0.14),0px 2px 4px -1px rgba(0,0,0,0.20);
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c28 tbody tr:hover + tr {
  border-top: 2px solid rgba(0,0,0,0);
}

.c15 {
  display: flex;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  padding: 16px 0;
  max-height: 40px;
  margin-bottom: 8px;
}

.c26 svg {
  font-size: 20px;
}

.c26 svg:before {
  padding-left: 1px;
}

.c20 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 0 200px 200px 0;
}

.c19 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-left: 1px solid rgba(255,255,255,0.07);
  border-radius: 0 200px 200px 0;
}

.c17 {
  position: relative;
  display: flex;
  overflow: hidden;
  border-radius: 200px;
  height: 100%;
  background: transparent;
  max-width: 725px;
}

.c16 {
  border-radius: 200px;
  width: 100%;
  height: 56px;
  margin-bottom: 12px;
}

.c18 {
  border: none;
  outline: none;
  box-sizing: border-box;
  font-size: 16px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  padding-right: 184px;
  padding-left: 24px;
}

.c29 tbody > tr > td {
  vertical-align: middle;
}

@media screen and (max-width:800px) {
  .c6 {
    flex-direction: column;
    height: auto;
    gap: 10px;
    margin: 0 0 10px 0;
    padding-bottom: 10px;
    justify-content: center;
  }
}

<div
  class="c0 c1 c2"
>
  <div
    class="c3 c4 c5 c6"
  >
    <div
      class="c7 c8"
    >
      Active Sessions
    </div>
    <div
      class="c9"
      width="340px"
    >
      <a
        class="c10"
        height="36px"
        href="https://goteleport.com/r/upgrade-team?e_4.4.0-dev&utm_campaign=CTA_ACTIVE_SESSIONS"
        kind="primary"
        rel="noreferrer"
        style="text-transform: none;"
        target="blank"
        width="100%"
      >
        <div
          class="c11 c12"
        >
          <span
            class="c13 c14"
            data-testid="locked-icon"
          >
            <svg
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
            >
              <path
                clip-rule="evenodd"
                d="M9.87868 3.12868C10.4413 2.56607 11.2044 2.25 12 2.25C13.4683 2.25 14.7404 3.29757 15.015 4.64933C15.0975 5.05525 15.4934 5.31746 15.8993 5.23498C16.3053 5.15251 16.5675 4.75659 16.485 4.35067C16.064 2.27868 14.1598 0.75 12 0.75C10.8065 0.75 9.66193 1.22411 8.81802 2.06802C7.97411 2.91193 7.5 4.05653 7.5 5.25V7.5H4.5C3.67157 7.5 3 8.17157 3 9V19.5C3 20.3284 3.67157 21 4.5 21H19.5C20.3284 21 21 20.3284 21 19.5V9C21 8.17157 20.3284 7.5 19.5 7.5H9V5.25C9 4.45435 9.31607 3.69129 9.87868 3.12868ZM4.5 9V19.5H19.5V9H4.5Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          Join Active Sessions With Teleport Enterprise
        </div>
      </a>
    </div>
  </div>
  <div
    class="c3"
  />
  <nav
    class="c15"
  >
    <div
      class="c16"
    >
      <div
        class="c17"
      >
        <input
          class="c18"
          placeholder="Search..."
          value=""
        />
        <div
          class="c19"
        >
          <div
            class="c20"
          />
        </div>
      </div>
    </div>
  </nav>
  <div
    class="c21 c22"
    width="100%"
  >
    <div
      class="c23 c1"
    >
      <div
        class="c24"
        font-weight="500"
        style="white-space: nowrap; letter-spacing: 0.15px;"
      >
        Showing 
        <strong>
          1
        </strong>
         - 
        <strong>
          7
        </strong>
         of
         
        <strong>
          7
        </strong>
      </div>
    </div>
    <div
      class="c11 c1"
    >
      <button
        class="c25 c26"
        disabled=""
        title="Previous page"
      >
        <span
          class="c13 icon icon-circlearrowleft"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M10.0607 11.25L11.7803 9.53033C12.0732 9.23744 12.0732 8.76256 11.7803 8.46967C11.4874 8.17678 11.0126 8.17678 10.7197 8.46967L7.71967 11.4697C7.64776 11.5416 7.59351 11.6245 7.55691 11.7129C7.52024 11.8013 7.5 11.8983 7.5 12C7.5 12.1017 7.52024 12.1987 7.55691 12.2871C7.59351 12.3755 7.64776 12.4584 7.71967 12.5303L10.7197 15.5303C11.0126 15.8232 11.4874 15.8232 11.7803 15.5303C12.0732 15.2374 12.0732 14.7626 11.7803 14.4697L10.0607 12.75H15.75C16.1642 12.75 16.5 12.4142 16.5 12C16.5 11.5858 16.1642 11.25 15.75 11.25H10.0607Z"
            />
            <path
              clip-rule="evenodd"
              d="M2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <button
        class="c27 c26"
        disabled=""
        title="Next page"
      >
        <span
          class="c13 icon icon-circlearrowright"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75ZM2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM7.5 12C7.5 11.5858 7.83579 11.25 8.25 11.25H13.9393L12.2197 9.53033C11.9268 9.23744 11.9268 8.76256 12.2197 8.46967C12.5126 8.17678 12.9874 8.17678 13.2803 8.46967L16.2803 11.4697C16.3522 11.5416 16.4065 11.6245 16.4431 11.7129C16.4798 11.8013 16.5 11.8983 16.5 12C16.5 12.1017 16.4798 12.1987 16.4431 12.2871C16.4065 12.3755 16.3522 12.4584 16.2803 12.5303L13.2803 15.5303C12.9874 15.8232 12.5126 15.8232 12.2197 15.5303C11.9268 15.2374 11.9268 14.7626 12.2197 14.4697L13.9393 12.75H8.25C7.83579 12.75 7.5 12.4142 7.5 12Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <table
    class="c28 c29"
  >
    <thead>
      <tr>
        <th>
          <a
            style="display: flex; align-items: center;"
          >
            Type
            <span
              class="c13 icon icon-chevronsvertical"
              title="sort items"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                />
                <path
                  d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                />
              </svg>
            </span>
          </a>
        </th>
        <th>
          <a
            style="display: flex; align-items: center;"
          >
            Name
            <span
              class="c13 icon icon-chevronsvertical"
              title="sort items"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                />
                <path
                  d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                />
              </svg>
            </span>
          </a>
        </th>
        <th
          style="cursor: default;"
        >
          Session ID
        </th>
        <th
          style="cursor: default;"
        >
          Users
        </th>
        <th
          style="cursor: default;"
        >
          Command
        </th>
        <th>
          <a
            style="display: flex; align-items: center;"
          >
            Duration
            <span
              class="c13 icon icon-chevronup"
              title="sort items asc"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.4697 6.96967C11.7626 6.67678 12.2374 6.67678 12.5303 6.96967L20.0303 14.4697C20.3232 14.7626 20.3232 15.2374 20.0303 15.5303C19.7374 15.8232 19.2626 15.8232 18.9697 15.5303L12 8.56066L5.03033 15.5303C4.73744 15.8232 4.26256 15.8232 3.96967 15.5303C3.67678 15.2374 3.67678 14.7626 3.96967 14.4697L11.4697 6.96967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </a>
        </th>
        <th
          style="cursor: default;"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <span
            class="c30 icon icon-kubernetes"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M12.7495 2.75C12.7495 2.33579 12.4137 2 11.9995 2C11.5853 2 11.2495 2.33579 11.2495 2.75V4.03474C9.20979 4.22451 7.39229 5.18004 6.08729 6.61106L5.03424 5.81548C4.70375 5.56578 4.23341 5.63129 3.98372 5.96178C3.73403 6.29228 3.79954 6.76261 4.13003 7.0123L5.18439 7.80888C4.4333 9.02771 4 10.4633 4 12C4 12.5033 4.04647 12.9957 4.13536 13.4732L2.54515 13.9251C2.14672 14.0384 1.91552 14.4532 2.02876 14.8516C2.142 15.25 2.5568 15.4812 2.95523 15.368L4.54782 14.9154C5.22303 16.64 6.47965 18.0731 8.07658 18.9735L7.19821 20.9432C7.02951 21.3215 7.19943 21.765 7.57773 21.9337C7.95604 22.1024 8.39947 21.9324 8.56817 21.5541L9.44675 19.5839C10.2486 19.8538 11.1072 20 12 20C12.8925 20 13.7508 19.8539 14.5524 19.5842L15.4309 21.5541C15.5996 21.9324 16.043 22.1024 16.4213 21.9337C16.7996 21.765 16.9695 21.3215 16.8009 20.9432L15.9227 18.9739C17.5199 18.0736 18.7767 16.6404 19.4521 14.9156L21.0438 15.368C21.4423 15.4812 21.8571 15.25 21.9703 14.8516C22.0835 14.4532 21.8523 14.0384 21.4539 13.9251L19.8646 13.4734C19.9535 12.9959 20 12.5034 20 12C20 10.4631 19.5666 9.02733 18.8153 7.8084L19.869 7.0123C20.1995 6.76261 20.265 6.29228 20.0153 5.96178C19.7656 5.63129 19.2953 5.56578 18.9648 5.81548L17.9123 6.61064C16.6072 5.17963 14.7894 4.22419 12.7495 4.03465V2.75ZM7.29042 7.52004C8.31235 6.44607 9.69781 5.72125 11.2495 5.54286V9.3614L10.3201 9.80899L7.29042 7.52004ZM9.4488 11.0307L6.38806 8.71827C5.82359 9.68147 5.5 10.8029 5.5 12C5.5 12.3613 5.52947 12.7156 5.58614 13.0609L9.22124 12.0277L9.4488 11.0307ZM9.7 13.451L5.99934 14.5028C6.54133 15.8008 7.49217 16.8854 8.69092 17.5958L10.2382 14.126L9.7 13.451ZM11.6233 14.7029L10.0612 18.2059C10.6735 18.397 11.3247 18.5 12 18.5C12.675 18.5 13.3259 18.3971 13.9379 18.2062L12.3757 14.7029H11.6233ZM13.7611 14.1267L15.3083 17.5963C16.5074 16.8859 17.4584 15.8012 18.0006 14.5031L14.2998 13.4513L13.7611 14.1267ZM14.7788 12.028L18.4138 13.0611C18.4705 12.7158 18.5 12.3613 18.5 12C18.5 10.8027 18.1763 9.68108 17.6116 8.71777L14.551 11.0301L14.7788 12.028ZM13.6793 9.80872L16.7092 7.51962C15.6871 6.44567 14.3014 5.72093 12.7495 5.54275V9.36096L13.6793 9.80872ZM10.9561 11.1676L12 10.6649L13.0438 11.1676L13.3016 12.2971L12.5793 13.2029H11.4207L10.6983 12.2971L10.9561 11.1676Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          minikube
        </td>
        <td>
          7174aded-340a-4863-b661-7ba52aeb22c8
        </td>
        <td>
          lisa2
        </td>
        <td>
          kubectl get pods
        </td>
        <td>
          59 minutes
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
      <tr>
        <td>
          <span
            class="c30 icon icon-cli"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M4.24828 5.43945C3.93869 5.16426 3.46464 5.19215 3.18945 5.50174C2.91426 5.81132 2.94215 6.28538 3.25174 6.56056L9.37111 12L3.25174 17.4395C2.94215 17.7146 2.91426 18.1887 3.18945 18.4983C3.46464 18.8079 3.93869 18.8358 4.24828 18.5606L10.9983 12.5606C11.1584 12.4182 11.25 12.2142 11.25 12C11.25 11.7858 11.1584 11.5818 10.9983 11.4395L4.24828 5.43945ZM11.25 17.25C10.8358 17.25 10.5 17.5858 10.5 18C10.5 18.4142 10.8358 18.75 11.25 18.75H20.25C20.6642 18.75 21 18.4142 21 18C21 17.5858 20.6642 17.25 20.25 17.25H11.25Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          im-a-nodename
        </td>
        <td>
          c7befbb4-3885-4d08-a466-de832a73c3d4
        </td>
        <td>
          lisa2
        </td>
        <td>
          ls -la
        </td>
        <td>
          5 seconds
        </td>
        <td
          align="right"
          height="26px"
        >
          <div
            class="c31"
            width="80px"
          >
            <button
              class="c32"
              kind="border"
            >
              Join
              <span
                class="c33 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <span
            class="c30 icon icon-cli"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M4.24828 5.43945C3.93869 5.16426 3.46464 5.19215 3.18945 5.50174C2.91426 5.81132 2.94215 6.28538 3.25174 6.56056L9.37111 12L3.25174 17.4395C2.94215 17.7146 2.91426 18.1887 3.18945 18.4983C3.46464 18.8079 3.93869 18.8358 4.24828 18.5606L10.9983 12.5606C11.1584 12.4182 11.25 12.2142 11.25 12C11.25 11.7858 11.1584 11.5818 10.9983 11.4395L4.24828 5.43945ZM11.25 17.25C10.8358 17.25 10.5 17.5858 10.5 18C10.5 18.4142 10.8358 18.75 11.25 18.75H20.25C20.6642 18.75 21 18.4142 21 18C21 17.5858 20.6642 17.25 20.25 17.25H11.25Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          im-a-nodename-2
        </td>
        <td>
          b204924e-6b74-5d92-89ea-d95043a969f1
        </td>
        <td>
          lisa3
        </td>
        <td>
          top -o command -o cpu -o boosts -o cycles -o cow -o user -o vsize -o csw -o threads -o ports -o ppid
        </td>
        <td>
          5 seconds
        </td>
        <td
          align="right"
          height="26px"
        >
          <div
            class="c31"
            width="80px"
          >
            <button
              class="c32"
              kind="border"
            >
              Join
              <span
                class="c33 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <span
            class="c30 icon icon-cli"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M4.24828 5.43945C3.93869 5.16426 3.46464 5.19215 3.18945 5.50174C2.91426 5.81132 2.94215 6.28538 3.25174 6.56056L9.37111 12L3.25174 17.4395C2.94215 17.7146 2.91426 18.1887 3.18945 18.4983C3.46464 18.8079 3.93869 18.8358 4.24828 18.5606L10.9983 12.5606C11.1584 12.4182 11.25 12.2142 11.25 12C11.25 11.7858 11.1584 11.5818 10.9983 11.4395L4.24828 5.43945ZM11.25 17.25C10.8358 17.25 10.5 17.5858 10.5 18C10.5 18.4142 10.8358 18.75 11.25 18.75H20.25C20.6642 18.75 21 18.4142 21 18C21 17.5858 20.6642 17.25 20.25 17.25H11.25Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          im-a-nodename-3
        </td>
        <td>
          8830cfe5-369e-5485-9c3d-19cc50e6f548
        </td>
        <td>
          lisa2
        </td>
        <td>
          top -o command -o cpu -o boosts -o cycles -o cow -o user -o vsize -o csw -o threads -o ports -o ppid
        </td>
        <td>
          5 seconds
        </td>
        <td
          align="right"
          height="26px"
        >
          <div
            class="c31"
            width="80px"
          >
            <button
              class="c32"
              kind="border"
            >
              Join
              <span
                class="c33 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <span
            class="c30 icon icon-desktop"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M12.75 18.75H19.5C20.7426 18.75 21.75 17.7426 21.75 16.5V6C21.75 4.75736 20.7426 3.75 19.5 3.75H4.5C3.25736 3.75 2.25 4.75736 2.25 6V16.5C2.25 17.7426 3.25736 18.75 4.5 18.75H11.25V20.25H9C8.58579 20.25 8.25 20.5858 8.25 21C8.25 21.4142 8.58579 21.75 9 21.75H15C15.4142 21.75 15.75 21.4142 15.75 21C15.75 20.5858 15.4142 20.25 15 20.25H12.75V18.75ZM20.25 16.5C20.25 16.9142 19.9142 17.25 19.5 17.25H4.5C4.08579 17.25 3.75 16.9142 3.75 16.5V15H20.25V16.5ZM3.75 6V13.5H20.25V6C20.25 5.58579 19.9142 5.25 19.5 5.25H4.5C4.08579 5.25 3.75 5.58579 3.75 6Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          desktop-2
        </td>
        <td>
          acacfbb4-3885-4d08-a466-de832a73ffac
        </td>
        <td>
          lisa2
        </td>
        <td>
          top -o command -o cpu -o boosts -o cycles -o cow -o user -o vsize -o csw -o threads -o ports -o ppid
        </td>
        <td>
          5 seconds
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
      <tr>
        <td>
          <span
            class="c30 icon icon-database"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M6.52551 4.97644C5.1342 5.73534 4.5 6.66048 4.5 7.5C4.5 8.33952 5.1342 9.26466 6.52551 10.0236C7.88846 10.767 9.82259 11.25 12 11.25C14.1774 11.25 16.1115 10.767 17.4745 10.0236C18.8658 9.26466 19.5 8.33952 19.5 7.5C19.5 6.66048 18.8658 5.73534 17.4745 4.97644C16.1115 4.23301 14.1774 3.75 12 3.75C9.82259 3.75 7.88846 4.23301 6.52551 4.97644ZM5.80723 3.6596C4.21263 4.52938 3 5.85424 3 7.5V12V16.5C3 18.1458 4.21266 19.4706 5.80727 20.3404C7.43024 21.2257 9.62111 21.75 12 21.75C14.3789 21.75 16.5698 21.2257 18.1927 20.3404C19.7873 19.4706 21 18.1458 21 16.5V12V7.5C21 5.85424 19.7874 4.52938 18.1928 3.6596C16.5698 2.77434 14.3789 2.25 12 2.25C9.62106 2.25 7.43019 2.77434 5.80723 3.6596ZM19.5 14.9404V16.5C19.5 17.3395 18.8658 18.2647 17.4745 19.0236C16.1115 19.767 14.1774 20.25 12 20.25C9.82264 20.25 7.88851 19.767 6.52554 19.0236C5.13421 18.2647 4.5 17.3395 4.5 16.5V14.9404C4.88666 15.2788 5.32984 15.58 5.80727 15.8404C7.43024 16.7257 9.62111 17.25 12 17.25C14.3789 17.25 16.5698 16.7257 18.1927 15.8404C18.6702 15.58 19.1133 15.2788 19.5 14.9404ZM4.5 12C4.5 12.8395 5.13421 13.7647 6.52554 14.5236C7.88851 15.267 9.82264 15.75 12 15.75C14.1774 15.75 16.1115 15.267 17.4745 14.5236C18.8658 13.7647 19.5 12.8395 19.5 12V10.4404C19.1134 10.7788 18.6702 11.08 18.1928 11.3404C16.5698 12.2257 14.3789 12.75 12 12.75C9.62106 12.75 7.43019 12.2257 5.80723 11.3404C5.32982 11.08 4.88664 10.7788 4.5 10.4404V12Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          databse-32
        </td>
        <td>
          2314fbb4-3885-4d08-a466-de832a731222
        </td>
        <td>
          lisa2
        </td>
        <td>
          top -o command -o cpu -o boosts -o cycles -o cow -o user -o vsize -o csw -o threads -o ports -o ppid
        </td>
        <td>
          3 minutes
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
      <tr>
        <td>
          <span
            class="c30 icon icon-application"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M6.375 8.8125C6.89277 8.8125 7.3125 8.39277 7.3125 7.875C7.3125 7.35723 6.89277 6.9375 6.375 6.9375C5.85723 6.9375 5.4375 7.35723 5.4375 7.875C5.4375 8.39277 5.85723 8.8125 6.375 8.8125Z"
              />
              <path
                d="M11.0625 7.875C11.0625 8.39277 10.6428 8.8125 10.125 8.8125C9.60723 8.8125 9.1875 8.39277 9.1875 7.875C9.1875 7.35723 9.60723 6.9375 10.125 6.9375C10.6428 6.9375 11.0625 7.35723 11.0625 7.875Z"
              />
              <path
                clip-rule="evenodd"
                d="M2.25 5.25C2.25 4.42157 2.92157 3.75 3.75 3.75H20.25C21.0784 3.75 21.75 4.42157 21.75 5.25V18.75C21.75 19.5784 21.0784 20.25 20.25 20.25H3.75C2.92157 20.25 2.25 19.5784 2.25 18.75V5.25ZM20.25 5.25H3.75V18.75H20.25V5.25Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          grafana
        </td>
        <td>
          cafefbb4-3885-4d08-a466-de832a7313131
        </td>
        <td>
          lisa2
        </td>
        <td>
          top -o command -o cpu -o boosts -o cycles -o cow -o user -o vsize -o csw -o threads -o ports -o ppid
        </td>
        <td>
          13 minutes
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`loaded 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c27 {
  box-sizing: border-box;
  width: 80px;
  text-align: center;
}

.c15 {
  box-sizing: border-box;
  margin-bottom: 4px;
  width: 100%;
}

.c17 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c19 {
  box-sizing: border-box;
}

.c28 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c28:hover,
.c28:focus {
  background: rgba(255,255,255,0.07);
}

.c28:active {
  background: rgba(255,255,255,0.13);
}

.c28:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c20 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c20:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c20:not(:disabled):hover,
.c20:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c20:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c23 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c23:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c23:not(:disabled):hover,
.c23:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c23:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c22 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c26 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  margin-right: 16px;
  padding: 4px;
}

.c29 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.72);
  margin-left: 4px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c18 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  font-weight: 500;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c16 {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c8 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c24 {
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c24 > thead > tr > th,
.c24 > tbody > tr > th,
.c24 > tfoot > tr > th,
.c24 > thead > tr > td,
.c24 > tbody > tr > td,
.c24 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c24 > thead > tr > th:first-child,
.c24 > tbody > tr > th:first-child,
.c24 > tfoot > tr > th:first-child,
.c24 > thead > tr > td:first-child,
.c24 > tbody > tr > td:first-child,
.c24 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c24 > thead > tr > th:last-child,
.c24 > tbody > tr > th:last-child,
.c24 > tfoot > tr > th:last-child,
.c24 > thead > tr > td:last-child,
.c24 > tbody > tr > td:last-child,
.c24 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c24 > tbody > tr > td {
  vertical-align: middle;
}

.c24 > thead > tr > th {
  color: #FFFFFF;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  cursor: pointer;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  white-space: nowrap;
}

.c24 > thead > tr > th svg {
  height: 12px;
}

.c24 > tbody > tr > td {
  color: #FFFFFF;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.035px;
}

.c24 tbody tr {
  transition: all 150ms;
  position: relative;
  border-top: 2px solid rgba(255,255,255,0.07);
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c24 tbody tr:hover {
  border-top: 2px solid rgba(0,0,0,0);
  background-color: #222C59;
}

.c24 tbody tr:hover:after {
  box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.12),0px 4px 5px 0px rgba(0,0,0,0.14),0px 2px 4px -1px rgba(0,0,0,0.20);
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c24 tbody tr:hover + tr {
  border-top: 2px solid rgba(0,0,0,0);
}

.c9 {
  display: flex;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  padding: 16px 0;
  max-height: 40px;
  margin-bottom: 8px;
}

.c21 svg {
  font-size: 20px;
}

.c21 svg:before {
  padding-left: 1px;
}

.c14 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 0 200px 200px 0;
}

.c13 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-left: 1px solid rgba(255,255,255,0.07);
  border-radius: 0 200px 200px 0;
}

.c11 {
  position: relative;
  display: flex;
  overflow: hidden;
  border-radius: 200px;
  height: 100%;
  background: transparent;
  max-width: 725px;
}

.c10 {
  border-radius: 200px;
  width: 100%;
  height: 56px;
  margin-bottom: 12px;
}

.c12 {
  border: none;
  outline: none;
  box-sizing: border-box;
  font-size: 16px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  padding-right: 184px;
  padding-left: 24px;
}

.c25 tbody > tr > td {
  vertical-align: middle;
}

@media screen and (max-width:800px) {
  .c6 {
    flex-direction: column;
    height: auto;
    gap: 10px;
    margin: 0 0 10px 0;
    padding-bottom: 10px;
    justify-content: center;
  }
}

<div
  class="c0 c1 c2"
>
  <div
    class="c3 c4 c5 c6"
  >
    <div
      class="c7 c8"
    >
      Active Sessions
    </div>
  </div>
  <div
    class="c3"
  />
  <nav
    class="c9"
  >
    <div
      class="c10"
    >
      <div
        class="c11"
      >
        <input
          class="c12"
          placeholder="Search..."
          value=""
        />
        <div
          class="c13"
        >
          <div
            class="c14"
          />
        </div>
      </div>
    </div>
  </nav>
  <div
    class="c15 c16"
    width="100%"
  >
    <div
      class="c17 c1"
    >
      <div
        class="c18"
        font-weight="500"
        style="white-space: nowrap; letter-spacing: 0.15px;"
      >
        Showing 
        <strong>
          1
        </strong>
         - 
        <strong>
          7
        </strong>
         of
         
        <strong>
          7
        </strong>
      </div>
    </div>
    <div
      class="c19 c1"
    >
      <button
        class="c20 c21"
        disabled=""
        title="Previous page"
      >
        <span
          class="c22 icon icon-circlearrowleft"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M10.0607 11.25L11.7803 9.53033C12.0732 9.23744 12.0732 8.76256 11.7803 8.46967C11.4874 8.17678 11.0126 8.17678 10.7197 8.46967L7.71967 11.4697C7.64776 11.5416 7.59351 11.6245 7.55691 11.7129C7.52024 11.8013 7.5 11.8983 7.5 12C7.5 12.1017 7.52024 12.1987 7.55691 12.2871C7.59351 12.3755 7.64776 12.4584 7.71967 12.5303L10.7197 15.5303C11.0126 15.8232 11.4874 15.8232 11.7803 15.5303C12.0732 15.2374 12.0732 14.7626 11.7803 14.4697L10.0607 12.75H15.75C16.1642 12.75 16.5 12.4142 16.5 12C16.5 11.5858 16.1642 11.25 15.75 11.25H10.0607Z"
            />
            <path
              clip-rule="evenodd"
              d="M2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <button
        class="c23 c21"
        disabled=""
        title="Next page"
      >
        <span
          class="c22 icon icon-circlearrowright"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75ZM2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM7.5 12C7.5 11.5858 7.83579 11.25 8.25 11.25H13.9393L12.2197 9.53033C11.9268 9.23744 11.9268 8.76256 12.2197 8.46967C12.5126 8.17678 12.9874 8.17678 13.2803 8.46967L16.2803 11.4697C16.3522 11.5416 16.4065 11.6245 16.4431 11.7129C16.4798 11.8013 16.5 11.8983 16.5 12C16.5 12.1017 16.4798 12.1987 16.4431 12.2871C16.4065 12.3755 16.3522 12.4584 16.2803 12.5303L13.2803 15.5303C12.9874 15.8232 12.5126 15.8232 12.2197 15.5303C11.9268 15.2374 11.9268 14.7626 12.2197 14.4697L13.9393 12.75H8.25C7.83579 12.75 7.5 12.4142 7.5 12Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <table
    class="c24 c25"
  >
    <thead>
      <tr>
        <th>
          <a
            style="display: flex; align-items: center;"
          >
            Type
            <span
              class="c22 icon icon-chevronsvertical"
              title="sort items"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                />
                <path
                  d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                />
              </svg>
            </span>
          </a>
        </th>
        <th>
          <a
            style="display: flex; align-items: center;"
          >
            Name
            <span
              class="c22 icon icon-chevronsvertical"
              title="sort items"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                />
                <path
                  d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                />
              </svg>
            </span>
          </a>
        </th>
        <th
          style="cursor: default;"
        >
          Session ID
        </th>
        <th
          style="cursor: default;"
        >
          Users
        </th>
        <th
          style="cursor: default;"
        >
          Command
        </th>
        <th>
          <a
            style="display: flex; align-items: center;"
          >
            Duration
            <span
              class="c22 icon icon-chevronup"
              title="sort items asc"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.4697 6.96967C11.7626 6.67678 12.2374 6.67678 12.5303 6.96967L20.0303 14.4697C20.3232 14.7626 20.3232 15.2374 20.0303 15.5303C19.7374 15.8232 19.2626 15.8232 18.9697 15.5303L12 8.56066L5.03033 15.5303C4.73744 15.8232 4.26256 15.8232 3.96967 15.5303C3.67678 15.2374 3.67678 14.7626 3.96967 14.4697L11.4697 6.96967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </a>
        </th>
        <th
          style="cursor: default;"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <span
            class="c26 icon icon-kubernetes"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M12.7495 2.75C12.7495 2.33579 12.4137 2 11.9995 2C11.5853 2 11.2495 2.33579 11.2495 2.75V4.03474C9.20979 4.22451 7.39229 5.18004 6.08729 6.61106L5.03424 5.81548C4.70375 5.56578 4.23341 5.63129 3.98372 5.96178C3.73403 6.29228 3.79954 6.76261 4.13003 7.0123L5.18439 7.80888C4.4333 9.02771 4 10.4633 4 12C4 12.5033 4.04647 12.9957 4.13536 13.4732L2.54515 13.9251C2.14672 14.0384 1.91552 14.4532 2.02876 14.8516C2.142 15.25 2.5568 15.4812 2.95523 15.368L4.54782 14.9154C5.22303 16.64 6.47965 18.0731 8.07658 18.9735L7.19821 20.9432C7.02951 21.3215 7.19943 21.765 7.57773 21.9337C7.95604 22.1024 8.39947 21.9324 8.56817 21.5541L9.44675 19.5839C10.2486 19.8538 11.1072 20 12 20C12.8925 20 13.7508 19.8539 14.5524 19.5842L15.4309 21.5541C15.5996 21.9324 16.043 22.1024 16.4213 21.9337C16.7996 21.765 16.9695 21.3215 16.8009 20.9432L15.9227 18.9739C17.5199 18.0736 18.7767 16.6404 19.4521 14.9156L21.0438 15.368C21.4423 15.4812 21.8571 15.25 21.9703 14.8516C22.0835 14.4532 21.8523 14.0384 21.4539 13.9251L19.8646 13.4734C19.9535 12.9959 20 12.5034 20 12C20 10.4631 19.5666 9.02733 18.8153 7.8084L19.869 7.0123C20.1995 6.76261 20.265 6.29228 20.0153 5.96178C19.7656 5.63129 19.2953 5.56578 18.9648 5.81548L17.9123 6.61064C16.6072 5.17963 14.7894 4.22419 12.7495 4.03465V2.75ZM7.29042 7.52004C8.31235 6.44607 9.69781 5.72125 11.2495 5.54286V9.3614L10.3201 9.80899L7.29042 7.52004ZM9.4488 11.0307L6.38806 8.71827C5.82359 9.68147 5.5 10.8029 5.5 12C5.5 12.3613 5.52947 12.7156 5.58614 13.0609L9.22124 12.0277L9.4488 11.0307ZM9.7 13.451L5.99934 14.5028C6.54133 15.8008 7.49217 16.8854 8.69092 17.5958L10.2382 14.126L9.7 13.451ZM11.6233 14.7029L10.0612 18.2059C10.6735 18.397 11.3247 18.5 12 18.5C12.675 18.5 13.3259 18.3971 13.9379 18.2062L12.3757 14.7029H11.6233ZM13.7611 14.1267L15.3083 17.5963C16.5074 16.8859 17.4584 15.8012 18.0006 14.5031L14.2998 13.4513L13.7611 14.1267ZM14.7788 12.028L18.4138 13.0611C18.4705 12.7158 18.5 12.3613 18.5 12C18.5 10.8027 18.1763 9.68108 17.6116 8.71777L14.551 11.0301L14.7788 12.028ZM13.6793 9.80872L16.7092 7.51962C15.6871 6.44567 14.3014 5.72093 12.7495 5.54275V9.36096L13.6793 9.80872ZM10.9561 11.1676L12 10.6649L13.0438 11.1676L13.3016 12.2971L12.5793 13.2029H11.4207L10.6983 12.2971L10.9561 11.1676Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          minikube
        </td>
        <td>
          7174aded-340a-4863-b661-7ba52aeb22c8
        </td>
        <td>
          lisa2
        </td>
        <td>
          kubectl get pods
        </td>
        <td>
          59 minutes
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
      <tr>
        <td>
          <span
            class="c26 icon icon-cli"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M4.24828 5.43945C3.93869 5.16426 3.46464 5.19215 3.18945 5.50174C2.91426 5.81132 2.94215 6.28538 3.25174 6.56056L9.37111 12L3.25174 17.4395C2.94215 17.7146 2.91426 18.1887 3.18945 18.4983C3.46464 18.8079 3.93869 18.8358 4.24828 18.5606L10.9983 12.5606C11.1584 12.4182 11.25 12.2142 11.25 12C11.25 11.7858 11.1584 11.5818 10.9983 11.4395L4.24828 5.43945ZM11.25 17.25C10.8358 17.25 10.5 17.5858 10.5 18C10.5 18.4142 10.8358 18.75 11.25 18.75H20.25C20.6642 18.75 21 18.4142 21 18C21 17.5858 20.6642 17.25 20.25 17.25H11.25Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          im-a-nodename
        </td>
        <td>
          c7befbb4-3885-4d08-a466-de832a73c3d4
        </td>
        <td>
          lisa2
        </td>
        <td>
          ls -la
        </td>
        <td>
          5 seconds
        </td>
        <td
          align="right"
          height="26px"
        >
          <div
            class="c27"
            width="80px"
          >
            <button
              class="c28"
              kind="border"
            >
              Join
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <span
            class="c26 icon icon-cli"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M4.24828 5.43945C3.93869 5.16426 3.46464 5.19215 3.18945 5.50174C2.91426 5.81132 2.94215 6.28538 3.25174 6.56056L9.37111 12L3.25174 17.4395C2.94215 17.7146 2.91426 18.1887 3.18945 18.4983C3.46464 18.8079 3.93869 18.8358 4.24828 18.5606L10.9983 12.5606C11.1584 12.4182 11.25 12.2142 11.25 12C11.25 11.7858 11.1584 11.5818 10.9983 11.4395L4.24828 5.43945ZM11.25 17.25C10.8358 17.25 10.5 17.5858 10.5 18C10.5 18.4142 10.8358 18.75 11.25 18.75H20.25C20.6642 18.75 21 18.4142 21 18C21 17.5858 20.6642 17.25 20.25 17.25H11.25Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          im-a-nodename-2
        </td>
        <td>
          b204924e-6b74-5d92-89ea-d95043a969f1
        </td>
        <td>
          lisa3
        </td>
        <td>
          top -o command -o cpu -o boosts -o cycles -o cow -o user -o vsize -o csw -o threads -o ports -o ppid
        </td>
        <td>
          5 seconds
        </td>
        <td
          align="right"
          height="26px"
        >
          <div
            class="c27"
            width="80px"
          >
            <button
              class="c28"
              kind="border"
            >
              Join
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <span
            class="c26 icon icon-cli"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M4.24828 5.43945C3.93869 5.16426 3.46464 5.19215 3.18945 5.50174C2.91426 5.81132 2.94215 6.28538 3.25174 6.56056L9.37111 12L3.25174 17.4395C2.94215 17.7146 2.91426 18.1887 3.18945 18.4983C3.46464 18.8079 3.93869 18.8358 4.24828 18.5606L10.9983 12.5606C11.1584 12.4182 11.25 12.2142 11.25 12C11.25 11.7858 11.1584 11.5818 10.9983 11.4395L4.24828 5.43945ZM11.25 17.25C10.8358 17.25 10.5 17.5858 10.5 18C10.5 18.4142 10.8358 18.75 11.25 18.75H20.25C20.6642 18.75 21 18.4142 21 18C21 17.5858 20.6642 17.25 20.25 17.25H11.25Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          im-a-nodename-3
        </td>
        <td>
          8830cfe5-369e-5485-9c3d-19cc50e6f548
        </td>
        <td>
          lisa2
        </td>
        <td>
          top -o command -o cpu -o boosts -o cycles -o cow -o user -o vsize -o csw -o threads -o ports -o ppid
        </td>
        <td>
          5 seconds
        </td>
        <td
          align="right"
          height="26px"
        >
          <div
            class="c27"
            width="80px"
          >
            <button
              class="c28"
              kind="border"
            >
              Join
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <span
            class="c26 icon icon-desktop"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M12.75 18.75H19.5C20.7426 18.75 21.75 17.7426 21.75 16.5V6C21.75 4.75736 20.7426 3.75 19.5 3.75H4.5C3.25736 3.75 2.25 4.75736 2.25 6V16.5C2.25 17.7426 3.25736 18.75 4.5 18.75H11.25V20.25H9C8.58579 20.25 8.25 20.5858 8.25 21C8.25 21.4142 8.58579 21.75 9 21.75H15C15.4142 21.75 15.75 21.4142 15.75 21C15.75 20.5858 15.4142 20.25 15 20.25H12.75V18.75ZM20.25 16.5C20.25 16.9142 19.9142 17.25 19.5 17.25H4.5C4.08579 17.25 3.75 16.9142 3.75 16.5V15H20.25V16.5ZM3.75 6V13.5H20.25V6C20.25 5.58579 19.9142 5.25 19.5 5.25H4.5C4.08579 5.25 3.75 5.58579 3.75 6Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          desktop-2
        </td>
        <td>
          acacfbb4-3885-4d08-a466-de832a73ffac
        </td>
        <td>
          lisa2
        </td>
        <td>
          top -o command -o cpu -o boosts -o cycles -o cow -o user -o vsize -o csw -o threads -o ports -o ppid
        </td>
        <td>
          5 seconds
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
      <tr>
        <td>
          <span
            class="c26 icon icon-database"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M6.52551 4.97644C5.1342 5.73534 4.5 6.66048 4.5 7.5C4.5 8.33952 5.1342 9.26466 6.52551 10.0236C7.88846 10.767 9.82259 11.25 12 11.25C14.1774 11.25 16.1115 10.767 17.4745 10.0236C18.8658 9.26466 19.5 8.33952 19.5 7.5C19.5 6.66048 18.8658 5.73534 17.4745 4.97644C16.1115 4.23301 14.1774 3.75 12 3.75C9.82259 3.75 7.88846 4.23301 6.52551 4.97644ZM5.80723 3.6596C4.21263 4.52938 3 5.85424 3 7.5V12V16.5C3 18.1458 4.21266 19.4706 5.80727 20.3404C7.43024 21.2257 9.62111 21.75 12 21.75C14.3789 21.75 16.5698 21.2257 18.1927 20.3404C19.7873 19.4706 21 18.1458 21 16.5V12V7.5C21 5.85424 19.7874 4.52938 18.1928 3.6596C16.5698 2.77434 14.3789 2.25 12 2.25C9.62106 2.25 7.43019 2.77434 5.80723 3.6596ZM19.5 14.9404V16.5C19.5 17.3395 18.8658 18.2647 17.4745 19.0236C16.1115 19.767 14.1774 20.25 12 20.25C9.82264 20.25 7.88851 19.767 6.52554 19.0236C5.13421 18.2647 4.5 17.3395 4.5 16.5V14.9404C4.88666 15.2788 5.32984 15.58 5.80727 15.8404C7.43024 16.7257 9.62111 17.25 12 17.25C14.3789 17.25 16.5698 16.7257 18.1927 15.8404C18.6702 15.58 19.1133 15.2788 19.5 14.9404ZM4.5 12C4.5 12.8395 5.13421 13.7647 6.52554 14.5236C7.88851 15.267 9.82264 15.75 12 15.75C14.1774 15.75 16.1115 15.267 17.4745 14.5236C18.8658 13.7647 19.5 12.8395 19.5 12V10.4404C19.1134 10.7788 18.6702 11.08 18.1928 11.3404C16.5698 12.2257 14.3789 12.75 12 12.75C9.62106 12.75 7.43019 12.2257 5.80723 11.3404C5.32982 11.08 4.88664 10.7788 4.5 10.4404V12Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          databse-32
        </td>
        <td>
          2314fbb4-3885-4d08-a466-de832a731222
        </td>
        <td>
          lisa2
        </td>
        <td>
          top -o command -o cpu -o boosts -o cycles -o cow -o user -o vsize -o csw -o threads -o ports -o ppid
        </td>
        <td>
          3 minutes
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
      <tr>
        <td>
          <span
            class="c26 icon icon-application"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M6.375 8.8125C6.89277 8.8125 7.3125 8.39277 7.3125 7.875C7.3125 7.35723 6.89277 6.9375 6.375 6.9375C5.85723 6.9375 5.4375 7.35723 5.4375 7.875C5.4375 8.39277 5.85723 8.8125 6.375 8.8125Z"
              />
              <path
                d="M11.0625 7.875C11.0625 8.39277 10.6428 8.8125 10.125 8.8125C9.60723 8.8125 9.1875 8.39277 9.1875 7.875C9.1875 7.35723 9.60723 6.9375 10.125 6.9375C10.6428 6.9375 11.0625 7.35723 11.0625 7.875Z"
              />
              <path
                clip-rule="evenodd"
                d="M2.25 5.25C2.25 4.42157 2.92157 3.75 3.75 3.75H20.25C21.0784 3.75 21.75 4.42157 21.75 5.25V18.75C21.75 19.5784 21.0784 20.25 20.25 20.25H3.75C2.92157 20.25 2.25 19.5784 2.25 18.75V5.25ZM20.25 5.25H3.75V18.75H20.25V5.25Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          grafana
        </td>
        <td>
          cafefbb4-3885-4d08-a466-de832a7313131
        </td>
        <td>
          lisa2
        </td>
        <td>
          top -o command -o cpu -o boosts -o cycles -o cow -o user -o vsize -o csw -o threads -o ports -o ppid
        </td>
        <td>
          13 minutes
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`moderated sessions CTA for non-enterprise 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c27 {
  box-sizing: border-box;
  width: 80px;
  text-align: center;
}

.c15 {
  box-sizing: border-box;
  margin-bottom: 4px;
  width: 100%;
}

.c17 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c19 {
  box-sizing: border-box;
}

.c28 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c28:hover,
.c28:focus {
  background: rgba(255,255,255,0.07);
}

.c28:active {
  background: rgba(255,255,255,0.13);
}

.c28:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c20 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c20:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c20:not(:disabled):hover,
.c20:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c20:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c23 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c23:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c23:not(:disabled):hover,
.c23:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c23:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c22 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c26 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  margin-right: 16px;
  padding: 4px;
}

.c29 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.72);
  margin-left: 4px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
}

.c18 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  font-weight: 500;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c16 {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c8 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c24 {
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c24 > thead > tr > th,
.c24 > tbody > tr > th,
.c24 > tfoot > tr > th,
.c24 > thead > tr > td,
.c24 > tbody > tr > td,
.c24 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c24 > thead > tr > th:first-child,
.c24 > tbody > tr > th:first-child,
.c24 > tfoot > tr > th:first-child,
.c24 > thead > tr > td:first-child,
.c24 > tbody > tr > td:first-child,
.c24 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c24 > thead > tr > th:last-child,
.c24 > tbody > tr > th:last-child,
.c24 > tfoot > tr > th:last-child,
.c24 > thead > tr > td:last-child,
.c24 > tbody > tr > td:last-child,
.c24 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c24 > tbody > tr > td {
  vertical-align: middle;
}

.c24 > thead > tr > th {
  color: #FFFFFF;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  cursor: pointer;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  white-space: nowrap;
}

.c24 > thead > tr > th svg {
  height: 12px;
}

.c24 > tbody > tr > td {
  color: #FFFFFF;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.035px;
}

.c24 tbody tr {
  transition: all 150ms;
  position: relative;
  border-top: 2px solid rgba(255,255,255,0.07);
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c24 tbody tr:hover {
  border-top: 2px solid rgba(0,0,0,0);
  background-color: #222C59;
}

.c24 tbody tr:hover:after {
  box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.12),0px 4px 5px 0px rgba(0,0,0,0.14),0px 2px 4px -1px rgba(0,0,0,0.20);
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c24 tbody tr:hover + tr {
  border-top: 2px solid rgba(0,0,0,0);
}

.c9 {
  display: flex;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  padding: 16px 0;
  max-height: 40px;
  margin-bottom: 8px;
}

.c21 svg {
  font-size: 20px;
}

.c21 svg:before {
  padding-left: 1px;
}

.c14 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 0 200px 200px 0;
}

.c13 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-left: 1px solid rgba(255,255,255,0.07);
  border-radius: 0 200px 200px 0;
}

.c11 {
  position: relative;
  display: flex;
  overflow: hidden;
  border-radius: 200px;
  height: 100%;
  background: transparent;
  max-width: 725px;
}

.c10 {
  border-radius: 200px;
  width: 100%;
  height: 56px;
  margin-bottom: 12px;
}

.c12 {
  border: none;
  outline: none;
  box-sizing: border-box;
  font-size: 16px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  padding-right: 184px;
  padding-left: 24px;
}

.c25 tbody > tr > td {
  vertical-align: middle;
}

@media screen and (max-width:800px) {
  .c6 {
    flex-direction: column;
    height: auto;
    gap: 10px;
    margin: 0 0 10px 0;
    padding-bottom: 10px;
    justify-content: center;
  }
}

<div
  class="c0 c1 c2"
>
  <div
    class="c3 c4 c5 c6"
  >
    <div
      class="c7 c8"
    >
      Active Sessions
    </div>
  </div>
  <div
    class="c3"
  />
  <nav
    class="c9"
  >
    <div
      class="c10"
    >
      <div
        class="c11"
      >
        <input
          class="c12"
          placeholder="Search..."
          value=""
        />
        <div
          class="c13"
        >
          <div
            class="c14"
          />
        </div>
      </div>
    </div>
  </nav>
  <div
    class="c15 c16"
    width="100%"
  >
    <div
      class="c17 c1"
    >
      <div
        class="c18"
        font-weight="500"
        style="white-space: nowrap; letter-spacing: 0.15px;"
      >
        Showing 
        <strong>
          1
        </strong>
         - 
        <strong>
          7
        </strong>
         of
         
        <strong>
          7
        </strong>
      </div>
    </div>
    <div
      class="c19 c1"
    >
      <button
        class="c20 c21"
        disabled=""
        title="Previous page"
      >
        <span
          class="c22 icon icon-circlearrowleft"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M10.0607 11.25L11.7803 9.53033C12.0732 9.23744 12.0732 8.76256 11.7803 8.46967C11.4874 8.17678 11.0126 8.17678 10.7197 8.46967L7.71967 11.4697C7.64776 11.5416 7.59351 11.6245 7.55691 11.7129C7.52024 11.8013 7.5 11.8983 7.5 12C7.5 12.1017 7.52024 12.1987 7.55691 12.2871C7.59351 12.3755 7.64776 12.4584 7.71967 12.5303L10.7197 15.5303C11.0126 15.8232 11.4874 15.8232 11.7803 15.5303C12.0732 15.2374 12.0732 14.7626 11.7803 14.4697L10.0607 12.75H15.75C16.1642 12.75 16.5 12.4142 16.5 12C16.5 11.5858 16.1642 11.25 15.75 11.25H10.0607Z"
            />
            <path
              clip-rule="evenodd"
              d="M2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <button
        class="c23 c21"
        disabled=""
        title="Next page"
      >
        <span
          class="c22 icon icon-circlearrowright"
        >
          <svg
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75ZM2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM7.5 12C7.5 11.5858 7.83579 11.25 8.25 11.25H13.9393L12.2197 9.53033C11.9268 9.23744 11.9268 8.76256 12.2197 8.46967C12.5126 8.17678 12.9874 8.17678 13.2803 8.46967L16.2803 11.4697C16.3522 11.5416 16.4065 11.6245 16.4431 11.7129C16.4798 11.8013 16.5 11.8983 16.5 12C16.5 12.1017 16.4798 12.1987 16.4431 12.2871C16.4065 12.3755 16.3522 12.4584 16.2803 12.5303L13.2803 15.5303C12.9874 15.8232 12.5126 15.8232 12.2197 15.5303C11.9268 15.2374 11.9268 14.7626 12.2197 14.4697L13.9393 12.75H8.25C7.83579 12.75 7.5 12.4142 7.5 12Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <table
    class="c24 c25"
  >
    <thead>
      <tr>
        <th>
          <a
            style="display: flex; align-items: center;"
          >
            Type
            <span
              class="c22 icon icon-chevronsvertical"
              title="sort items"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                />
                <path
                  d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                />
              </svg>
            </span>
          </a>
        </th>
        <th>
          <a
            style="display: flex; align-items: center;"
          >
            Name
            <span
              class="c22 icon icon-chevronsvertical"
              title="sort items"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                />
                <path
                  d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                />
              </svg>
            </span>
          </a>
        </th>
        <th
          style="cursor: default;"
        >
          Session ID
        </th>
        <th
          style="cursor: default;"
        >
          Users
        </th>
        <th
          style="cursor: default;"
        >
          Command
        </th>
        <th>
          <a
            style="display: flex; align-items: center;"
          >
            Duration
            <span
              class="c22 icon icon-chevronup"
              title="sort items asc"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.4697 6.96967C11.7626 6.67678 12.2374 6.67678 12.5303 6.96967L20.0303 14.4697C20.3232 14.7626 20.3232 15.2374 20.0303 15.5303C19.7374 15.8232 19.2626 15.8232 18.9697 15.5303L12 8.56066L5.03033 15.5303C4.73744 15.8232 4.26256 15.8232 3.96967 15.5303C3.67678 15.2374 3.67678 14.7626 3.96967 14.4697L11.4697 6.96967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </a>
        </th>
        <th
          style="cursor: default;"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <span
            class="c26 icon icon-kubernetes"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M12.7495 2.75C12.7495 2.33579 12.4137 2 11.9995 2C11.5853 2 11.2495 2.33579 11.2495 2.75V4.03474C9.20979 4.22451 7.39229 5.18004 6.08729 6.61106L5.03424 5.81548C4.70375 5.56578 4.23341 5.63129 3.98372 5.96178C3.73403 6.29228 3.79954 6.76261 4.13003 7.0123L5.18439 7.80888C4.4333 9.02771 4 10.4633 4 12C4 12.5033 4.04647 12.9957 4.13536 13.4732L2.54515 13.9251C2.14672 14.0384 1.91552 14.4532 2.02876 14.8516C2.142 15.25 2.5568 15.4812 2.95523 15.368L4.54782 14.9154C5.22303 16.64 6.47965 18.0731 8.07658 18.9735L7.19821 20.9432C7.02951 21.3215 7.19943 21.765 7.57773 21.9337C7.95604 22.1024 8.39947 21.9324 8.56817 21.5541L9.44675 19.5839C10.2486 19.8538 11.1072 20 12 20C12.8925 20 13.7508 19.8539 14.5524 19.5842L15.4309 21.5541C15.5996 21.9324 16.043 22.1024 16.4213 21.9337C16.7996 21.765 16.9695 21.3215 16.8009 20.9432L15.9227 18.9739C17.5199 18.0736 18.7767 16.6404 19.4521 14.9156L21.0438 15.368C21.4423 15.4812 21.8571 15.25 21.9703 14.8516C22.0835 14.4532 21.8523 14.0384 21.4539 13.9251L19.8646 13.4734C19.9535 12.9959 20 12.5034 20 12C20 10.4631 19.5666 9.02733 18.8153 7.8084L19.869 7.0123C20.1995 6.76261 20.265 6.29228 20.0153 5.96178C19.7656 5.63129 19.2953 5.56578 18.9648 5.81548L17.9123 6.61064C16.6072 5.17963 14.7894 4.22419 12.7495 4.03465V2.75ZM7.29042 7.52004C8.31235 6.44607 9.69781 5.72125 11.2495 5.54286V9.3614L10.3201 9.80899L7.29042 7.52004ZM9.4488 11.0307L6.38806 8.71827C5.82359 9.68147 5.5 10.8029 5.5 12C5.5 12.3613 5.52947 12.7156 5.58614 13.0609L9.22124 12.0277L9.4488 11.0307ZM9.7 13.451L5.99934 14.5028C6.54133 15.8008 7.49217 16.8854 8.69092 17.5958L10.2382 14.126L9.7 13.451ZM11.6233 14.7029L10.0612 18.2059C10.6735 18.397 11.3247 18.5 12 18.5C12.675 18.5 13.3259 18.3971 13.9379 18.2062L12.3757 14.7029H11.6233ZM13.7611 14.1267L15.3083 17.5963C16.5074 16.8859 17.4584 15.8012 18.0006 14.5031L14.2998 13.4513L13.7611 14.1267ZM14.7788 12.028L18.4138 13.0611C18.4705 12.7158 18.5 12.3613 18.5 12C18.5 10.8027 18.1763 9.68108 17.6116 8.71777L14.551 11.0301L14.7788 12.028ZM13.6793 9.80872L16.7092 7.51962C15.6871 6.44567 14.3014 5.72093 12.7495 5.54275V9.36096L13.6793 9.80872ZM10.9561 11.1676L12 10.6649L13.0438 11.1676L13.3016 12.2971L12.5793 13.2029H11.4207L10.6983 12.2971L10.9561 11.1676Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          minikube
        </td>
        <td>
          7174aded-340a-4863-b661-7ba52aeb22c8
        </td>
        <td>
          lisa2
        </td>
        <td>
          kubectl get pods
        </td>
        <td>
          59 minutes
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
      <tr>
        <td>
          <span
            class="c26 icon icon-cli"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M4.24828 5.43945C3.93869 5.16426 3.46464 5.19215 3.18945 5.50174C2.91426 5.81132 2.94215 6.28538 3.25174 6.56056L9.37111 12L3.25174 17.4395C2.94215 17.7146 2.91426 18.1887 3.18945 18.4983C3.46464 18.8079 3.93869 18.8358 4.24828 18.5606L10.9983 12.5606C11.1584 12.4182 11.25 12.2142 11.25 12C11.25 11.7858 11.1584 11.5818 10.9983 11.4395L4.24828 5.43945ZM11.25 17.25C10.8358 17.25 10.5 17.5858 10.5 18C10.5 18.4142 10.8358 18.75 11.25 18.75H20.25C20.6642 18.75 21 18.4142 21 18C21 17.5858 20.6642 17.25 20.25 17.25H11.25Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          im-a-nodename
        </td>
        <td>
          c7befbb4-3885-4d08-a466-de832a73c3d4
        </td>
        <td>
          lisa2
        </td>
        <td>
          ls -la
        </td>
        <td>
          5 seconds
        </td>
        <td
          align="right"
          height="26px"
        >
          <div
            class="c27"
            width="80px"
          >
            <button
              class="c28"
              kind="border"
            >
              Join
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <span
            class="c26 icon icon-cli"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M4.24828 5.43945C3.93869 5.16426 3.46464 5.19215 3.18945 5.50174C2.91426 5.81132 2.94215 6.28538 3.25174 6.56056L9.37111 12L3.25174 17.4395C2.94215 17.7146 2.91426 18.1887 3.18945 18.4983C3.46464 18.8079 3.93869 18.8358 4.24828 18.5606L10.9983 12.5606C11.1584 12.4182 11.25 12.2142 11.25 12C11.25 11.7858 11.1584 11.5818 10.9983 11.4395L4.24828 5.43945ZM11.25 17.25C10.8358 17.25 10.5 17.5858 10.5 18C10.5 18.4142 10.8358 18.75 11.25 18.75H20.25C20.6642 18.75 21 18.4142 21 18C21 17.5858 20.6642 17.25 20.25 17.25H11.25Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          im-a-nodename-2
        </td>
        <td>
          b204924e-6b74-5d92-89ea-d95043a969f1
        </td>
        <td>
          lisa3
        </td>
        <td>
          top -o command -o cpu -o boosts -o cycles -o cow -o user -o vsize -o csw -o threads -o ports -o ppid
        </td>
        <td>
          5 seconds
        </td>
        <td
          align="right"
          height="26px"
        >
          <div
            class="c27"
            width="80px"
          >
            <button
              class="c28"
              kind="border"
            >
              Join
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <span
            class="c26 icon icon-cli"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M4.24828 5.43945C3.93869 5.16426 3.46464 5.19215 3.18945 5.50174C2.91426 5.81132 2.94215 6.28538 3.25174 6.56056L9.37111 12L3.25174 17.4395C2.94215 17.7146 2.91426 18.1887 3.18945 18.4983C3.46464 18.8079 3.93869 18.8358 4.24828 18.5606L10.9983 12.5606C11.1584 12.4182 11.25 12.2142 11.25 12C11.25 11.7858 11.1584 11.5818 10.9983 11.4395L4.24828 5.43945ZM11.25 17.25C10.8358 17.25 10.5 17.5858 10.5 18C10.5 18.4142 10.8358 18.75 11.25 18.75H20.25C20.6642 18.75 21 18.4142 21 18C21 17.5858 20.6642 17.25 20.25 17.25H11.25Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          im-a-nodename-3
        </td>
        <td>
          8830cfe5-369e-5485-9c3d-19cc50e6f548
        </td>
        <td>
          lisa2
        </td>
        <td>
          top -o command -o cpu -o boosts -o cycles -o cow -o user -o vsize -o csw -o threads -o ports -o ppid
        </td>
        <td>
          5 seconds
        </td>
        <td
          align="right"
          height="26px"
        >
          <div
            class="c27"
            width="80px"
          >
            <button
              class="c28"
              kind="border"
            >
              Join
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <span
            class="c26 icon icon-desktop"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M12.75 18.75H19.5C20.7426 18.75 21.75 17.7426 21.75 16.5V6C21.75 4.75736 20.7426 3.75 19.5 3.75H4.5C3.25736 3.75 2.25 4.75736 2.25 6V16.5C2.25 17.7426 3.25736 18.75 4.5 18.75H11.25V20.25H9C8.58579 20.25 8.25 20.5858 8.25 21C8.25 21.4142 8.58579 21.75 9 21.75H15C15.4142 21.75 15.75 21.4142 15.75 21C15.75 20.5858 15.4142 20.25 15 20.25H12.75V18.75ZM20.25 16.5C20.25 16.9142 19.9142 17.25 19.5 17.25H4.5C4.08579 17.25 3.75 16.9142 3.75 16.5V15H20.25V16.5ZM3.75 6V13.5H20.25V6C20.25 5.58579 19.9142 5.25 19.5 5.25H4.5C4.08579 5.25 3.75 5.58579 3.75 6Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          desktop-2
        </td>
        <td>
          acacfbb4-3885-4d08-a466-de832a73ffac
        </td>
        <td>
          lisa2
        </td>
        <td>
          top -o command -o cpu -o boosts -o cycles -o cow -o user -o vsize -o csw -o threads -o ports -o ppid
        </td>
        <td>
          5 seconds
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
      <tr>
        <td>
          <span
            class="c26 icon icon-database"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M6.52551 4.97644C5.1342 5.73534 4.5 6.66048 4.5 7.5C4.5 8.33952 5.1342 9.26466 6.52551 10.0236C7.88846 10.767 9.82259 11.25 12 11.25C14.1774 11.25 16.1115 10.767 17.4745 10.0236C18.8658 9.26466 19.5 8.33952 19.5 7.5C19.5 6.66048 18.8658 5.73534 17.4745 4.97644C16.1115 4.23301 14.1774 3.75 12 3.75C9.82259 3.75 7.88846 4.23301 6.52551 4.97644ZM5.80723 3.6596C4.21263 4.52938 3 5.85424 3 7.5V12V16.5C3 18.1458 4.21266 19.4706 5.80727 20.3404C7.43024 21.2257 9.62111 21.75 12 21.75C14.3789 21.75 16.5698 21.2257 18.1927 20.3404C19.7873 19.4706 21 18.1458 21 16.5V12V7.5C21 5.85424 19.7874 4.52938 18.1928 3.6596C16.5698 2.77434 14.3789 2.25 12 2.25C9.62106 2.25 7.43019 2.77434 5.80723 3.6596ZM19.5 14.9404V16.5C19.5 17.3395 18.8658 18.2647 17.4745 19.0236C16.1115 19.767 14.1774 20.25 12 20.25C9.82264 20.25 7.88851 19.767 6.52554 19.0236C5.13421 18.2647 4.5 17.3395 4.5 16.5V14.9404C4.88666 15.2788 5.32984 15.58 5.80727 15.8404C7.43024 16.7257 9.62111 17.25 12 17.25C14.3789 17.25 16.5698 16.7257 18.1927 15.8404C18.6702 15.58 19.1133 15.2788 19.5 14.9404ZM4.5 12C4.5 12.8395 5.13421 13.7647 6.52554 14.5236C7.88851 15.267 9.82264 15.75 12 15.75C14.1774 15.75 16.1115 15.267 17.4745 14.5236C18.8658 13.7647 19.5 12.8395 19.5 12V10.4404C19.1134 10.7788 18.6702 11.08 18.1928 11.3404C16.5698 12.2257 14.3789 12.75 12 12.75C9.62106 12.75 7.43019 12.2257 5.80723 11.3404C5.32982 11.08 4.88664 10.7788 4.5 10.4404V12Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          databse-32
        </td>
        <td>
          2314fbb4-3885-4d08-a466-de832a731222
        </td>
        <td>
          lisa2
        </td>
        <td>
          top -o command -o cpu -o boosts -o cycles -o cow -o user -o vsize -o csw -o threads -o ports -o ppid
        </td>
        <td>
          3 minutes
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
      <tr>
        <td>
          <span
            class="c26 icon icon-application"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M6.375 8.8125C6.89277 8.8125 7.3125 8.39277 7.3125 7.875C7.3125 7.35723 6.89277 6.9375 6.375 6.9375C5.85723 6.9375 5.4375 7.35723 5.4375 7.875C5.4375 8.39277 5.85723 8.8125 6.375 8.8125Z"
              />
              <path
                d="M11.0625 7.875C11.0625 8.39277 10.6428 8.8125 10.125 8.8125C9.60723 8.8125 9.1875 8.39277 9.1875 7.875C9.1875 7.35723 9.60723 6.9375 10.125 6.9375C10.6428 6.9375 11.0625 7.35723 11.0625 7.875Z"
              />
              <path
                clip-rule="evenodd"
                d="M2.25 5.25C2.25 4.42157 2.92157 3.75 3.75 3.75H20.25C21.0784 3.75 21.75 4.42157 21.75 5.25V18.75C21.75 19.5784 21.0784 20.25 20.25 20.25H3.75C2.92157 20.25 2.25 19.5784 2.25 18.75V5.25ZM20.25 5.25H3.75V18.75H20.25V5.25Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </td>
        <td>
          grafana
        </td>
        <td>
          cafefbb4-3885-4d08-a466-de832a7313131
        </td>
        <td>
          lisa2
        </td>
        <td>
          top -o command -o cpu -o boosts -o cycles -o cow -o user -o vsize -o csw -o threads -o ports -o ppid
        </td>
        <td>
          13 minutes
        </td>
        <td
          align="right"
          height="26px"
        />
      </tr>
    </tbody>
  </table>
</div>
`;
